--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'TK'
 - !lcsh 'PDP-15 (Computer) -- Catalogs'
+- GITenberg
 title: Digital PDP15 Price List, April, 1970
 url: http://www.gutenberg.org/ebooks/37237
